@@ -1,3 +1,7 @@
+2006-07-04  Roberto Majadas  <telemaco@openshine.com>
+
+	* services/imaging/image.py: added image service 
+
 2006-07-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* tests/test-list-actions.c:
